// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeStatus renders for status down 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      color="down"
      size={10}
    />
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="overline"
    >
      down
       
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders for status healthy 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      color="healthy"
      size={10}
    />
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="overline"
    >
      healthy
       
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders for status restarting 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      color="restarting"
      size={10}
    />
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="overline"
    >
      restarting
       
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders for status syncing 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      color="syncing"
      size={10}
    />
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="overline"
    >
      syncing
       
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`NodeStatus renders sync progress in percent 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <Memo(WithStyles(PulseDot))
      color="syncing"
      size={10}
    />
    <WithStyles(ForwardRef(Typography))
      className="status-mock"
      display="inline"
      variant="overline"
    >
      syncing
       
      78%
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
